# haskell-nix-example

./: .hie.yaml  default.nix  haskell.cabal  shell.nix
