cabal-version:       >=1.10
name:                scratch
version:             0.1.0.0
license-file:        LICENSE
author:              David Terry
maintainer:          me@xwvvvvwx.com
build-type:          Simple

executable scratch
  main-is:             Main.hs
  build-depends:       base >=4.14 && <4.15
  default-language:    Haskell2010
